applied bit more validations for input data